# LLM_modeling

./: .gitignore  .impeccable.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
configs/hardware/: ascend_910c.yaml
configs/models/: llama3_1_8b.yaml
configs/presets/: deepseekv3_671b.yaml  llama3_1_8b.yaml  mistral_7b.yaml  qwen2_5_72b.yaml  qwen3_235b_moe.yaml
docs/: architecture.md  fp4-paper-modeling.md  large-sparse-ratio-moe.md  low-precision-findings.md  ui-audit-baseline.md
docs/superpowers/plans/: 2026-03-25-rl-perf-modeling.md  2026-03-25-rl-perf-phase2.md  2026-03-30-ui-rebuild.md  2026-06-26-dynamic-cp-pipeline.md  2026-06-27-low-precision-training-modeling.md  2026-06-28-large-sparse-ratio-moe-modeling.md  2026-06-29-fp4-paper-mixed-precision-modeling.md
docs/superpowers/specs/: 2026-03-25-rl-perf-modeling-design.md  2026-03-25-rl-perf-phase2-design.md  2026-06-26-dynamic-cp-pipeline-design.md  2026-06-27-low-precision-training-modeling-design.md  2026-06-29-fp4-paper-mixed-precision-modeling-design.md
examples/: demo.py  demo_dynamic_cp.py  demo_fp4_paper.py  demo_sparse_ratio.py
src/llm_perf/: builder.py  config.py  cost_analysis.py  dynamic_cp.py  model.py  ops.py  pp_pipeline.py  precision.py  report.py  simulator.py  training.py
src/rl_perf/: __init__.py  builder.py  cli.py  config.py  model.py  ops.py  pipeline.py  report.py
tests/: test_builder.py  test_cli.py  test_config.py  test_dynamic_cp.py  test_e2e.py  test_model.py  test_ops.py  test_pipeline.py  test_pp_pipeline.py  test_precision.py  test_report.py  test_simulator.py
(+23 files in other folders)
