[project]
name = "rl-perf"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
gui = ["gradio>=5.0", "plotly>=5.0", "huggingface-hub>=0.20"]
dev = ["pytest", "pytest-xdist", "ruff", "gradio>=5.0", "plotly>=5.0", "huggingface-hub>=0.20"]

[project.scripts]
rl-perf = "rl_perf.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
